force-app/main/default/objects/Account/fields/A_E_Quadrant_Previous__c.field-meta.xml
<CustomField>
    <fullName>A_E_Quadrant_Previous__c</fullName>
    <label>A&amp;E Quadrant (Previous)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>