force-app/main/default/objects/Account/fields/Account_Address_Area__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is created as a part of One Team Sales story, created to store the account address area</description>
    <label>Account Address Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BDA__c.Type__c</field>
            <operation>equals</operation>
            <value>Cluster</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BDA__c</referenceTo>
    <relationshipLabel>Account Address Area</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>