force-app/main/default/objects/Account/fields/Account_Counter__c.field-meta.xml
<CustomField>
    <fullName>Account_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this field in Reports to allow you to get true record counts of parent objects</inlineHelpText>
    <label>Account Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>