force-app/main/default/objects/Account/fields/Account_DEN_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_DEN_Category__c</fullName>
    <description>#RQ-005207: Changed label and picklist values.</description>
    <inlineHelpText>Not New/New. Assigned based on ambition for account overall (not trade or route specific)</inlineHelpText>
    <label>CluAp Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not New</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>