force-app/main/default/objects/Account/fields/Account_Owner_Maersk_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Maersk_ID__c</fullName>
    <formula>Current_Owner__r.Maersk_User_Id__c</formula>
    <label>Account Owner Maersk ID</label>
    <type>Text</type>
</CustomField>