force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Show True and False sign depending upon the Account Status.
#RQ-000998 : Formula edited to include condition for Non Shipping account</description>
    <formula>IF(   ISPICKVAL(SCV_Status__c , &apos;Active&apos; ) ||  RecordTypeId ==  $Label.Non_shipping_Party_Account_RecordType_Label  , IMAGE(&quot;/resource/Green_Tick&quot;,&quot;Active&quot;, 13, 13) , IMAGE(&quot;/resource/Red_Cross&quot;,&quot;InActive&quot; , 13, 13) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a visual indicator of whether or not this Account&apos;s Status in SCV. A red cross is &quot;Inactive&quot;, a green tick is &quot;Active&quot;.</inlineHelpText>
    <label>Active</label>
    <type>Text</type>
</CustomField>