force-app/main/default/objects/Account/fields/Actively_Managed__c.field-meta.xml
<CustomField>
    <fullName>Actively_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Visible only to SCL reps</description>
    <label>z_Actively Managed</label>
    <type>Checkbox</type>
</CustomField>