force-app/main/default/objects/Account/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <description>Visible only to SCL reps</description>
    <label>z_Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>ACTIVE</label>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>