force-app/main/default/objects/Account/fields/Agreed_Engagement_Approach__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Engagement_Approach__c</fullName>
    <description>RQ-004026 Added as part of this requirement.</description>
    <inlineHelpText>Enter the main method for a Sales Rep to interact with this customer - One Engagement Value Per Brand</inlineHelpText>
    <label>Agreed Engagement Approach</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KC Owner-MSL</fullName>
            </value>
            <value>
                <fullName>Reactive-MSL</fullName>
                <label>Online-MSL</label>
            </value>
            <value>
                <fullName>Primarily Field-MSL</fullName>
                <label>Primarily Field-Based-MSL</label>
            </value>
            <value>
                <fullName>Primarily Remote-MSL</fullName>
                <label>Primarily Office-Based-MSL</label>
            </value>
            <value>
                <fullName>Specialist-MSL</fullName>
            </value>
            <value>
                <fullName>Encouragement-SCL</fullName>
                <isActive>false</isActive>
                <label>Encouragement-SCL</label>
            </value>
            <value>
                <fullName>Field-SCL</fullName>
                <isActive>false</isActive>
                <label>Field-SCL</label>
            </value>
            <value>
                <fullName>Office-SCL</fullName>
                <isActive>false</isActive>
                <label>Office-SCL</label>
            </value>
            <value>
                <fullName>One touch-SCL</fullName>
                <isActive>false</isActive>
                <label>One touch-SCL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>