force-app/main/default/objects/Account/fields/Alianca_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Alianca_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFSE-8475 : This field is used to store the Alianca account Owner</description>
    <inlineHelpText>The Alianca Sales Person Responsible for this Account.</inlineHelpText>
    <label>Alianca Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Please select an Internal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Alianca_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>