force-app/main/default/objects/Account/fields/Annual_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Filing_Date__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration
#RQ-004162
#RQ-004927</description>
    <inlineHelpText>The date on which customers submit Tax returns, updated from CMD</inlineHelpText>
    <label>Annual Filing Date</label>
    <type>Date</type>
</CustomField>