force-app/main/default/objects/Account/fields/APM_Entities__c.field-meta.xml
<CustomField>
    <fullName>APM_Entities__c</fullName>
    <label>APM Entities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>