force-app/main/default/objects/Account/fields/Assigned_Ownwership__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Ownwership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using in Batch Apex</description>
    <label>Assigned Ownwership</label>
    <type>Checkbox</type>
</CustomField>