force-app/main/default/objects/Account/fields/Attractiveness__c.field-meta.xml
<CustomField>
    <fullName>Attractiveness__c</fullName>
    <label>Attractiveness</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Client</fullName>
            </value>
            <value>
                <fullName>Booster</fullName>
            </value>
            <value>
                <fullName>Runway</fullName>
            </value>
            <value>
                <fullName>A-MCC</fullName>
                <isActive>false</isActive>
                <label>A-MCC</label>
            </value>
            <value>
                <fullName>A-MLL</fullName>
                <isActive>false</isActive>
                <label>A-MLL</label>
            </value>
            <value>
                <fullName>A-SCL</fullName>
                <isActive>false</isActive>
                <label>A-SCL</label>
            </value>
            <value>
                <fullName>A-SEA</fullName>
                <isActive>false</isActive>
                <label>A-SEA</label>
            </value>
            <value>
                <fullName>A-SGO</fullName>
                <isActive>false</isActive>
                <label>A-SGO</label>
            </value>
            <value>
                <fullName>B-MCC</fullName>
                <isActive>false</isActive>
                <label>B-MCC</label>
            </value>
            <value>
                <fullName>B-MLL</fullName>
                <isActive>false</isActive>
                <label>B-MLL</label>
            </value>
            <value>
                <fullName>B-MSL</fullName>
                <isActive>false</isActive>
                <label>B-MSL</label>
            </value>
            <value>
                <fullName>B-SCL</fullName>
                <isActive>false</isActive>
                <label>B-SCL</label>
            </value>
            <value>
                <fullName>B-SEA</fullName>
                <isActive>false</isActive>
                <label>B-SEA</label>
            </value>
            <value>
                <fullName>B-SGO</fullName>
                <isActive>false</isActive>
                <label>B-SGO</label>
            </value>
            <value>
                <fullName>Booster-MSL</fullName>
                <isActive>false</isActive>
                <label>Booster-MSL</label>
            </value>
            <value>
                <fullName>C-MCC</fullName>
                <isActive>false</isActive>
                <label>C-MCC</label>
            </value>
            <value>
                <fullName>C-MLL</fullName>
                <isActive>false</isActive>
                <label>C-MLL</label>
            </value>
            <value>
                <fullName>C-MSL</fullName>
                <isActive>false</isActive>
                <label>C-MSL</label>
            </value>
            <value>
                <fullName>C-SCL</fullName>
                <isActive>false</isActive>
                <label>C-SCL</label>
            </value>
            <value>
                <fullName>C-SEA</fullName>
                <isActive>false</isActive>
                <label>C-SEA</label>
            </value>
            <value>
                <fullName>C-SGO</fullName>
                <isActive>false</isActive>
                <label>C-SGO</label>
            </value>
            <value>
                <fullName>Efficiency Key Client-MSL</fullName>
                <isActive>false</isActive>
                <label>Efficiency Key Client-MSL</label>
            </value>
            <value>
                <fullName>Extended Runway-MSL</fullName>
                <isActive>false</isActive>
                <label>Extended Runway-MSL</label>
            </value>
            <value>
                <fullName>Key - Client</fullName>
                <isActive>false</isActive>
                <label>Key - Client</label>
            </value>
            <value>
                <fullName>Key Client-MCC</fullName>
                <isActive>false</isActive>
                <label>Key Client-MCC</label>
            </value>
            <value>
                <fullName>Key Client-MLL</fullName>
                <isActive>false</isActive>
                <label>Key Client-MLL</label>
            </value>
            <value>
                <fullName>Key Client-MSL</fullName>
                <isActive>false</isActive>
                <label>Key Client-MSL</label>
            </value>
            <value>
                <fullName>Key Client-SCL</fullName>
                <isActive>false</isActive>
                <label>Key Client-SCL</label>
            </value>
            <value>
                <fullName>Key Client-SEA</fullName>
                <isActive>false</isActive>
                <label>Key Client-SEA</label>
            </value>
            <value>
                <fullName>Key Client-SGO</fullName>
                <isActive>false</isActive>
                <label>Key Client-SGO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>