force-app/main/default/objects/Account/fields/Brand_Delivery_Score_Previous__c.field-meta.xml
<CustomField>
    <fullName>Brand_Delivery_Score_Previous__c</fullName>
    <label>Brand Delivery Score (Previous)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>