force-app/main/default/objects/Account/fields/Business_Partner_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Number__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++
Do not change this field without reviewing impact with master data integration</description>
    <externalId>true</externalId>
    <inlineHelpText>This ID is the reference id from BPMA system for HSUD users to identify the relevant accounts and related records.</inlineHelpText>
    <label>Business Partner Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>