force-app/main/default/objects/Account/fields/BvD_ID__c.field-meta.xml
<CustomField>
    <fullName>BvD_ID__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot;
#RQ-004162
#RQ-004927</description>
    <inlineHelpText>Bureau van dijk  system ID -an external application</inlineHelpText>
    <label>BvD ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>