force-app/main/default/objects/Account/fields/Cluster_Name__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>+++ INTEGRATION: SCV, Business_Intelligence +++
#RQ-000235 - Help text added.
#RQ-005677 - Deprecated</description>
    <inlineHelpText>Cluster ownership based on MSL Account owner.</inlineHelpText>
    <label>z_Cluster</label>
    <referenceTo>BDA__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>