force-app/main/default/objects/Account/fields/Company_Presence__c.field-meta.xml
<CustomField>
    <fullName>Company_Presence__c</fullName>
    <description>SFMC- 7611 -Geographic locations the customer operates in</description>
    <inlineHelpText>Geographic locations the customer operates in</inlineHelpText>
    <label>Company Presence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maersk_Areas</valueSetName>
    </valueSet>
</CustomField>