force-app/main/default/objects/Account/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <description>Indicate client complexity as part of  #RQ-004025</description>
    <inlineHelpText>Select High if your customer has complex decision making process with multiple decision makers and/or buy multiple products</inlineHelpText>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
                <default>true</default>
                <label>Average</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>