force-app/main/default/objects/Account/fields/Concern_Code__c.field-meta.xml
<CustomField>
    <fullName>Concern_Code__c</fullName>
    <description>The Parent Accounts SCV Code if this is not a concern. If this account is a concern then use this SCV code.</description>
    <formula>IF ($RecordType.DeveloperName = &apos;Concern_Account&apos;,  SCV_Code__c  , Parent.SCV_Code__c)</formula>
    <inlineHelpText>The Parent Account&apos;s SCV Code.</inlineHelpText>
    <label>Concern Code</label>
    <type>Text</type>
</CustomField>