force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>+++ INTEGRATION: SCV +++</description>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Filtered Lookup Error: The specified &quot;Country&quot; is not of type &quot;Country&quot;.</errorMessage>
        <filterItems>
            <field>Geography__c.Type_Of_Location__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Accounts (Country)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>