force-app/main/default/objects/Account/fields/Credit_Days_Start__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days_Start__c</fullName>
    <description>Visible only to SCL reps</description>
    <label>z_Credit Days Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Days Start</fullName>
            </value>
            <value>
                <fullName>CM - Current Month</fullName>
            </value>
            <value>
                <fullName>INV - Invoice Date</fullName>
            </value>
            <value>
                <fullName>SAI - Sailing/Arrival Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>