force-app/main/default/objects/Account/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot;
#RQ-004162
#RQ-004927</description>
    <inlineHelpText>A credit rating is an evaluation of the credit risk of a prospective business, this field is populated via integration from CMD</inlineHelpText>
    <label>Credit Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>