force-app/main/default/objects/Account/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>it is a dev only field and captures the current account owner at any given point of time.</inlineHelpText>
    <label>Current Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>