force-app/main/default/objects/Account/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <externalId>true</externalId>
    <inlineHelpText>The SAP Fact code. This field is populated from CMD via Integration</inlineHelpText>
    <label>Customer Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>