force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <inlineHelpText>Indicates the customer group this customer belongs to and is set by integration from Master Data.</inlineHelpText>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCPI</fullName>
            </value>
            <value>
                <fullName>SCPI_TAX_EXEMPTED</fullName>
            </value>
            <value>
                <fullName>SCPI_TAX_EXEMPT</fullName>
                <isActive>false</isActive>
                <label>SCPI_TAX_EXEMPT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>