force-app/main/default/objects/Account/fields/Customer_Insights_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Insights_Score__c</fullName>
    <description>This field describes the priority score of a customer and indicates the likelihood of recommending ICH product.</description>
    <label>Customer Insights Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>