force-app/main/default/objects/Account/fields/Customer_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Manifest__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <label>Customer Manifest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NVOCC</fullName>
            </value>
            <value>
                <fullName>US Auto-NVOCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>