force-app/main/default/objects/Account/fields/Customer_Position__c.field-meta.xml
<CustomField>
    <fullName>Customer_Position__c</fullName>
    <description>SFSE-4613</description>
    <label>Customer Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Retention 70</fullName>
            </value>
            <value>
                <fullName>Retention Safmarine</fullName>
                <isActive>false</isActive>
                <label>Retention Safmarine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>