force-app/main/default/objects/Account/fields/Customer_Potential_FFE__c.field-meta.xml
<CustomField>
    <fullName>Customer_Potential_FFE__c</fullName>
    <label>Customer Potential FFE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>