force-app/main/default/objects/Account/fields/Customer_Role__c.field-meta.xml
<CustomField>
    <fullName>Customer_Role__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Indicates whether customer is a direct customer or 3rd party acting on behalf of customer . This is not the equivalent of NAC.This field is updated via integartion from CMD.</inlineHelpText>
    <label>Customer Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BCO</fullName>
            </value>
            <value>
                <fullName>Forwarder</fullName>
            </value>
            <value>
                <fullName>Shipping Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>