force-app/main/default/objects/Account/fields/Customer_Size__c.field-meta.xml
<CustomField>
    <fullName>Customer_Size__c</fullName>
    <description>+++ INTEGRATION: Maestro DATA +++
Do not change this field without reviewing impact with Maestro data integration.</description>
    <inlineHelpText>Customer size is estimated based on the total addressable logistics spend (for ocean &amp; L&amp;S products with all providers).</inlineHelpText>
    <label>Customer Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>