force-app/main/default/objects/Account/fields/Customer_SOP__c.field-meta.xml
<CustomField>
    <fullName>Customer_SOP__c</fullName>
    <inlineHelpText>Standard Operating Procedure of the customer. This is where you can describe specifics of how the customer wants to do business with us. eg. needs food grade containers. Information which we should be aware of without customer having to tell us.</inlineHelpText>
    <label>Customer Preferences</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>