force-app/main/default/objects/Account/fields/Customer_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Reason__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Indicates the reason why a customer code has been deactivated (made inactive). This field is populated via integration from CMD</inlineHelpText>
    <label>Customer Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SCV_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not In Use</fullName>
            </value>
            <value>
                <fullName>Customer Out Of Business</fullName>
            </value>
            <value>
                <fullName>Difficult Collections</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Legally Denied Party</fullName>
            </value>
            <value>
                <fullName>Unethical Behaviour</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Missing Or Invalid Mandatory Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>