force-app/main/default/objects/Account/fields/CX_Package__c.field-meta.xml
<CustomField>
    <fullName>CX_Package__c</fullName>
    <description>This field is the visual indicator of the CX package available for the customer</description>
    <formula>IF(CX_Package_Indicator__c ==&apos;Diamond&apos;, IMAGE(&quot;/resource/Diamond_Package&quot;, &quot;Diamond&quot;),
IF(CX_Package_Indicator__c ==&apos;Platinum&apos;, IMAGE(&quot;/resource/Platinum_Package&quot;, &quot;Platinum&quot;),
IF(CX_Package_Indicator__c ==&apos;Professional&apos;, IMAGE(&quot;/resource/Professional_Package&quot;, &quot;Professional&quot;), &apos;&apos;
)
)
)</formula>
    <label>CX Package</label>
    <type>Text</type>
</CustomField>