force-app/main/default/objects/Account/fields/CX_Package_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CX_Package_Indicator__c</fullName>
    <description>This field determines the applicable static CX package for the customer based on different parameters like Attractiveness, Customer role, Customer Size and Sales channel of the customer.</description>
    <formula>IF(NOT(ISBLANK(ParentId)),
IF(INCLUDES( Parent.Attractiveness__c , &apos;Key Client&apos;),&apos;Diamond&apos;,
IF(INCLUDES(Parent.Attractiveness__c, &apos;Runway&apos;),&apos;Platinum&apos;,
IF(ISPICKVAL( Parent.Customer_Role__c , &apos;Forwarder&apos;),&apos;Professional&apos;,&apos;&apos;
)
)
),
IF(INCLUDES( Attractiveness__c , &apos;Key Client&apos;),&apos;Diamond&apos;,
IF(INCLUDES(Attractiveness__c, &apos;Runway&apos;),&apos;Platinum&apos;,
IF(ISPICKVAL( Customer_Role__c , &apos;Forwarder&apos;),&apos;Professional&apos;,&apos;&apos;
)
)
)
)</formula>
    <label>CX Package Indicator</label>
    <type>Text</type>
</CustomField>