force-app/main/default/objects/Account/fields/Damco_BE_Code__c.field-meta.xml
<CustomField>
    <fullName>Damco_BE_Code__c</fullName>
    <description>RQ-010167: New field to capture BE Code</description>
    <inlineHelpText>BE Modes Code, ask Live Help to update once corresponding code is created in Damco MDM</inlineHelpText>
    <label>Damco BE Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>