force-app/main/default/objects/Account/fields/Draft_Accounts_Created_Counter__c.field-meta.xml
<CustomField>
    <fullName>Draft_Accounts_Created_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Draft Accounts Created Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>