force-app/main/default/objects/Account/fields/Executive_selling__c.field-meta.xml
<CustomField>
    <fullName>Executive_selling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive selling</label>
    <type>Checkbox</type>
</CustomField>