force-app/main/default/objects/Account/fields/FACT_Code__c.field-meta.xml
<CustomField>
    <fullName>FACT_Code__c</fullName>
    <label>FACT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>