force-app/main/default/objects/Account/fields/GUO_BvD_ID__c.field-meta.xml
<CustomField>
    <fullName>GUO_BvD_ID__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Global ultimate owner as defined by BVD and represents company&apos;s global head quarters</inlineHelpText>
    <label>GUO BvD ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>