force-app/main/default/objects/Account/fields/Historic_FFE__c.field-meta.xml
<CustomField>
    <fullName>Historic_FFE__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field is updated via Yoda interface.</description>
    <inlineHelpText>Contractual Customer (SCV) ,12 months rolling.</inlineHelpText>
    <label>Historic FFE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>