force-app/main/default/objects/Account/fields/HQ_BvD_ID__c.field-meta.xml
<CustomField>
    <fullName>HQ_BvD_ID__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Local head quarter as defined by BVD</inlineHelpText>
    <label>HQ BvD ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>